Stub UDF
Signed-off-by: Kenrick Yap <14yapkc1@gmail.com>